# hyper-risk

./: .gitignore  API_RESPONSE_FIX.md  BINARY_SELECTION_FIX.md  CARGO_LOCK_FIX.md  Cargo.toml  DEPLOYMENT_README.md  Dockerfile  Dockerfile.render  PERFORMANCE_OPTIMIZATIONS.md  README.md  RENDER_DEPLOYMENT_DEBUG.md  check_and_create_table.sh  check_app_response.sh  check_app_status.sh  cleanup_codebase.sh  deploy.md  deploy.sh  deploy_blueprint.sh  deploy_docker.sh  deploy_docker_fixed.sh  deploy_render_fixed.sh  docker_debug.sh  fix_api_errors.sh  hyperliquid_risk_log.jsonl  redeploy.sh  render.docker.yaml  render.yaml  render_deployment_guide.md  render_test.sh  restart_service.sh  simple_table_setup.sql  supabase_setup.sql  test_api.sh  test_docker_fix.sh  test_hyperliquid_api.sh  usage.md
dashboard/: README.md
dashboard/static/: index.html
dashboard/static/css/: styles.css
dashboard/static/js/: dashboard.js
docs/: DEPENDENCY_FIX.md  DEPLOYMENT_README.md  README.md  render_deployment_guide.md
src/: errors.rs  health_check.rs  helpers.rs  lib.rs  port_config_check.rs  port_config_fix.rs
src/risk_management/: config.rs  data_logging.rs  mod.rs  position_tracking.rs  risk_calculation.rs  risk_limits.rs  types.rs
